# quickly

./: Cargo.toml  README.md
newsapi/: Cargo.toml
newsapi/src/: lib.rs
src/: main.rs
