[package]
name = "quickly"
version = "0.1.0"
edition = "2021"

description = "A CLI news reader app"
license = "MIT"
authors = ["luiscardoso <luis@luiscardoso.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termimad = "0.14.2"
crossterm = "0.20.0"
dotenv = "0.15.0"
clap = "3.0.0-beta.5"
newsapi = {path = "./newsapi"}
